<resources>
    <string name="app_name">RApp</string>
    <string name="sja_uppskriftir">Sjá uppskriftir</string>
    <string name="titill">Uppskriftavefurinn RAPP</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="upphafsskjar">Upphafsskjár</string>
    <string name="uppskriftasidur">Sjá uppskriftasíður</string>
    <string name="forsida">Fara á forsíðu</string>
    <string name="view_user">Skoða notanda</string>
    <string name="create_page">Búa til síðu</string>
    <string name="view_page">Skoða síðu</string>
    <string name="update_user">Uppfæra notanda</string>
    <string name="go_to_creator_page">Fara á uppskriftasíðu</string>
    <string name="go_to_recipe">Skoða uppskrift</string>
    <string name="edit_page">Breyta síðu</string>
    <string name="create_recipe">Búa til uppskrift</string>
    <string name="edit_recipe">Uppfæra uppskrift</string>
    <string name="uppskriftavefurinn_rapp">Uppskriftavefurinn RAPP</string>
    <string name="uppskriftir">Uppskriftir</string>
    <string name="velja_random_uppskrift">Velja random uppskrift</string>
    <string name="sidur">Síður</string>
    <string name="sida_1">Síða 1</string>
    <string name="sida_2">Síða 2</string>
    <string name="sida_3">Síða 3</string>
    <string name="sida_4">Síða 4</string>
    <string name="velja_random_sidu">Velja random síðu</string>
    <string name="tikka_masala">Kjúklinga Tikka Masala</string>
    <string name="tikka_masala_desc">Þetta er kjúklingur</string>
    <string name="cheerios">Cheerios</string>
    <string name="cheerios_desc">Settu morgunkornið fyrst og síðan mjólkina</string>
    <string name="spaghetti_desc">Nennir einhver að nota skeið?</string>
    <string name="spaghetti">Spagettí</string>
    <string name="ristabraud">Ristað brauð</string>
    <string name="ristabraud_desc">Maður segir brauðrist en ekki ristavél</string>
    <string name="placeholder_recipe_title">Uppskriftartitill</string>
    <string name="placeholder_recipe_description">Innihald uppskriftar (description)</string>
    <string name="save">Vista</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>