<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrontPageFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="34dp"
            android:background="@color/teal_700"
            android:text="@string/uppskriftavefurinn_rapp"
            android:textSize="12pt"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/user_main_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/view_user" />

            <Button
                android:id="@+id/page_main_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/view_page" />

            <Button
                android:id="@+id/page_create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_page" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/teal_700"
                android:text="@string/uppskriftir"
                android:textSize="8pt"/>
            <Button
                android:id="@+id/random_recipe_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/black"
                android:text="@string/velja_random_uppskrift" />
            <Button
                android:id="@+id/recipe_1_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/black"
                android:text="@string/tikka_masala" />

            <Button
                android:id="@+id/recipe_2_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/black"
                android:text="@string/cheerios" />

            <Button
                android:id="@+id/recipe_3_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/black"
                android:text="@string/spaghetti" />

            <Button
                android:id="@+id/recipe_4_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/black"
                android:text="@string/ristabraud" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/teal_700"
                android:text="@string/sidur"
                android:textSize="8pt"/>
            <Button
                android:id="@+id/random_page_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/black"
                android:text="@string/velja_random_sidu" />
            <Button
                android:id="@+id/page_1_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/black"
                android:text="@string/sida_1" />

            <Button
                android:id="@+id/page_2_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/black"
                android:text="@string/sida_2" />

            <Button
                android:id="@+id/page_3_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/black"
                android:text="@string/sida_3" />

            <Button
                android:id="@+id/page_4_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/black"
                android:text="@string/sida_4" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>