<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="34dp"
        android:background="@color/teal_700"
        android:text="@string/uppskriftavefurinn_rapp"
        android:textSize="12pt"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/front_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forsida"
            android:layout_marginLeft="12dp"/>

        <Button
            android:id="@+id/recipe_change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_recipe"
            android:layout_marginLeft="12dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/user_main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_user"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:textSize="24dp"
        tools:text="@string/placeholder_recipe_title"/>

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/placeholder_recipe_description"/>

</LinearLayout>
